// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-vue-jsx > should allow to configure jsx babel plugin options 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/plugin-babel/compiled/babel-loader/index.js",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@vue/babel-plugin-jsx/dist/index.js",
                  {
                    "transformOn": false,
                  },
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                    "optimizeConstEnums": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugin-vue-jsx > should apply jsx babel plugin correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/plugin-babel/compiled/babel-loader/index.js",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@vue/babel-plugin-jsx/dist/index.js",
                  {},
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                    "optimizeConstEnums": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugin-vue-jsx > should apply jsx babel plugin correctly in rspack mode 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/plugin-babel/compiled/babel-loader/index.js",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@vue/babel-plugin-jsx/dist/index.js",
                  {},
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                    "optimizeConstEnums": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;
